GSLT/src/test/module/bad/BadFreeVar.module
Module BadFreeVar {
  Theory Bad() {
    new()
      .addExports(
        Term;
      )
      .addTerms (
        Foo . Term ::= "Foo" "Charlie";
        Bar . Term ::= "Bar" "Foxtrot";
      )
      .addRewrites (
        Baz: (Foo x) ~> (Bar y);
      )
  }
}
